# boxer

./: Cargo.toml
crate/core/: Cargo.toml
crate/core/src/: lib.rs  manifest.rs  package.rs
crate/utils/: Cargo.toml
crate/utils/src/: fmt.rs  lib.rs
registry/: .gitignore  Cargo.toml  api.go  go.mod  go.sum  main.go  routeRegistrar.go
registry/constants/: constants.go
registry/prisma/: schema.prisma
registry/routeManager/: main.go
registry/routes/heartbeat/: register.go
registry/routes/meta/: register.go
registry/src/: routes.rs
registry/utils/logger/: logger.go
registry/utils/types/: types.go
src/: main.rs  pull_package.rs
src/utils/: meta.rs  mod.rs
