[package]
name = "boxer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boxer-core = { path = "./crate/core" }
boxer-utils = { path = "./crate/utils" }
once_cell = "1.18.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
colored = "2.0.0"
