[package]
name = "boxer-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boxer-utils = { path = "../utils" }
git2 = "0.17.2"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.163", features = ["derive"] }
toml = "*"
tracing = "0.1.37"
colored = "2.0.0"
